# circt-cf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/ITC99/b01/: Makefile
benchmark/b01/: Makefile  synth.ys
benchmark/b06/: Makefile
benchmark/cva6/: Makefile  cva6.f
benchmark/mor1kx/: Makefile  mor1kx.f
benchmark/or1200/: Makefile  or1200.f  synth.ys
benchmark/or1200/verif/: Makefile  README.md  sim-main.cpp
benchmark/or1200/verif/or1k-am/: crt0.S  or1200.ld
benchmark/or1200/verif/or1k-am/coremark/: Makefile  core_portme.c  core_portme.h
benchmark/or1200/verif/or1k-am/program/: Makefile  program.c
benchmark/or1200/verif/scripts/: hex_to_readmemh.py
benchmark/or1200/verif/tb/: or1200_tb_top.sv
benchmark/picorv32/: Makefile
cmake/modules/: README.md
include/circt-cf/Instrumentation/: MooreProcedureAnalysis.h  Passes.h  Passes.td
include/circt-cf/Optimize/LLHD/: Passes.h  Passes.td
include/circt-cf/Optimize/Moore/: Passes.h  Passes.td
include/circt-cfa-trace/Dialect/LLHD/Transforms/: Passes.h  Passes.td
include/circt-cfa-trace/Dialect/Moore/Transforms/: Passes.h  Passes.td
include/circt-cfa-trace/Instrumentation/: Passes.td
include/circt-cfa-trace/Instrumentation/Transforms/: Passes.h
include/circt-cfa-trace/Optimize/LLHD/: Passes.h  Passes.td
include/circt-cfa-trace/Optimize/Moore/: Passes.h  Passes.td
include/pcov/Instrumentation/: MooreProcedureAnalysis.h  Passes.h  Passes.td
include/pcov/Optimize/Moore/: Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Dialect/LLHD/Transforms/: CMakeLists.txt  LLHDMemToFirMem.cpp
lib/Dialect/Moore/Transforms/: CMakeLists.txt  MergeProcedures.cpp  NormalizeProcedures.cpp
lib/Instrumentation/: CMakeLists.txt  InsertHWProbe.cpp  MooreExportProcessCFG.cpp  MooreInstrumentCoverage.cpp  MooreInstrumentCoverageSum.cpp  MooreInstrumentPathBitmap.cpp  MooreProcedureAnalysis.cpp  MooreSummarizeCoverage.cpp
lib/Optimize/: CMakeLists.txt
lib/Optimize/LLHD/: CMakeLists.txt  LLHDMemToFirMem.cpp
lib/Optimize/Moore/: CMakeLists.txt  FoldConstantBranches.cpp  FoldStaticRegisters.cpp  MergeProcedures.cpp  NormalizeProcedures.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/instrumentation/: insert-probe.mlir
tools/: CMakeLists.txt
tools/circt-cf/: CMakeLists.txt  circt-cf.cpp
tools/circt-cf-opt/: CMakeLists.txt  circt-cf-opt.cpp
tools/circt-cfa-trace/: CMakeLists.txt  circt-cfa-trace.cpp
tools/circt-cfa-trace-opt/: CMakeLists.txt  circt-cfa-trace-opt.cpp
tools/pcov/: CMakeLists.txt  pcov.cpp
tools/pcov-opt/: CMakeLists.txt  pcov-opt.cpp
